--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
-DATABASE_URL =""
+RABBITMQ_USER=""
+RABBITMQ_PASSWORD=""
+POSTGRES_USER=""
+POSTGRES_PASSWORD=""
+POSTGRES_DB=""
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}?sslmode=disable
 JWT_SECRET=""
 PORT=""
