update env example

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
 MQTT_BROKER=
 MQTT_CLIENT_ID=
-RABBITMQ_USER=""
-RABBITMQ_PASSWORD=""
-POSTGRES_USER=""
-POSTGRES_PASSWORD=""
-POSTGRES_DB=""
+RABBITMQ_USER=
+RABBITMQ_PASSWORD=
+RABBITMQ_URL=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
 DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}?sslmode=disable
-JWT_SECRET=""
-PORT=""
+JWT_SECRET=
+PORT=
